--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/common": "7.0.4",
     "@angular/compiler": "7.0.4",
     "@angular/core": "7.0.4",
+    "@angular/fire": "5.1.1",
     "@angular/flex-layout": "7.0.0-beta.19",
     "@angular/forms": "7.0.4",
     "@angular/http": "7.0.4",
@@ -49,8 +50,10 @@
     "core-js": "2.5.7",
     "d3": "5.7.0",
     "date-fns": "1.29.0",
+    "firebase": "5.8.1",
     "hammerjs": "2.0.8",
     "lodash": "4.17.11",
+    "material-time-control": "0.1.1",
     "moment": "2.22.2",
     "ng2-charts": "1.6.0",
     "ngrx-store-freeze": "0.2.4",
